--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/syaning/dict-en-zh#readme",
   "dependencies": {
+    "chalk": "^1.1.3",
     "optimist": "^0.6.1",
     "request": "^2.72.0"
   }
