--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/syaning/dict-en-zh#readme",
   "dependencies": {
     "chalk": "^1.1.3",
+    "cheerio": "^0.20.0",
     "optimist": "^0.6.1",
     "request": "^2.72.0"
   }
